# prexSim

./: .gitignore  CMakeLists.txt  README  README.md  anaHallRadiation.cc  anaHallRadiation.cc_old  calc1MeVneutronEquivalent.cc  drawBfield.cc  hallRadiation.cc  hallRadiation_AJZ.cc  hallRadiation_pvdis.cc  prex_sim.cc  readme.detector_list  reduceTree.cc  reduceTree_AJZ.cc  setupEnv
.kdev4/: trunk.kdev4
.svn/: wc.db
geometry/: #newPigDesign_1.gdml#  #prexCrexLeadTargetCarynaddPoly_likeciprian.gdml#  #prexCrexNewTarget.gdml#  .#newPigDesign_1.gdml  .#prexCrexNewTarget.gdml  .#prexII_newSC_update.gdml  CTgt_v3usTgt.gdml  apex.gdml  collShieldTest.gdml  collShieldTest.gdml~  connect.sh  crex.gdml  crex5_AJZShields.gdml  crex5_concrete2blocksPlusW_v2geom.gdml  crex5_current.gdml  crex5_iron2blocks.gdml  crex5_newHRS.gdml  crex5_noDonut.gdml  crex5_noSkyshine.gdml  crex5_oRingBeamPipe.gdml  crex5_smallerCollMidDonut.gdml  crex5_smallerCollPipe2Donut.gdml  crex5_v1ThickConcSS.gdml  crex5_v2Point6degSAMs.gdml  crex5_v4.gdml  crex5_v4_crex.gdml  crex5_v4_dvcs.gdml  crex5_v4_noSAMs.gdml  crex5deg.gdml  crex5deg_concrete2blocks28thick247Wide7cmZmovePlusW.gdml  crex5deg_concreteHalfShield.gdml  crex5deg_concreteL.gdml  crex5deg_concreteLHalfWidth.gdml  crex5deg_concreteLHalfWidth45cut.gdml  crex5deg_concreteLHalfWidthThick.gdml  crex5deg_concretePbLHalfMassHalfWidth.gdml  crex5deg_concreteShield.gdml  crex5deg_hdpeHalfShield.gdml  crex5deg_hdpeShield.gdml  crex5deg_shieldless.gdml  (+194 more)
include/: Geant4_include.hh  MollerAnalysis.hh  MollerDetectorConstruction.hh  MollerDetectorMessenger.hh  MollerDetectorSD.hh  MollerGlobalMagnetField.hh  MollerGlobalMagnetFieldMessenger.hh  MollerPrimaryGenAction.hh  MollerPrimaryGeneratorMessenger.hh  MollerSteppingAction.hh  MollerSteppingVerbose.hh  RootAnalysis.hh  radDamage.hh
macros/: gui.mac  myC5.mac  myP2.mac  myRun.mac  myRun_also.mac  myTritium.mac  preAPEX.mac  preC5.mac  preHAPPEX.mac  preMOLLER.mac  preP1.mac  preP2.mac  prePVDIS.mac  preRun.mac  preRun_also.mac  preRun_editing.mac  preTritium.mac  prerunmacro.mac  prex_prerun.mac  prex_prerunCiprian.mac  run_prex.mac  test_run_prex.mac  testing.mac
rootScripts/: DrawGDML.C  PlotCollNeutrons.C  PlotDistributions.C  PlotRatios.C  ajz_script.C  ajz_script_C.d  anaHalfTgt_redTree.C  camHallRad.C  cdf.C  collimatorPower.C  compareBeamPipe.C  compareBfield.C  compareDumpSims.C  compareDumpSims_AJZ.C  detDesigner.C  donutEnergy.C  drawFace.C  drawHRSheatMaps.C  drawHalfTgt_redTree.C  drawNeutronsZ.C  drawSams.C  draw_plots.C  drawtorroidmollers_rings_compare.C  getBoundaryStuff.C  getDetRad.C  hAddHallRad.C  parseBtable.C  powerInHall.C  prex_plots.C  printHallRad.C  raytrace_spread.C
scripts/: anaradWrapper.py  config.txt  config_reader.py  jlabSubmit.py  jlabSubmit_AJZ.py  jlabSubmit_cameron.py  jlabSubmit_hallRad_cameron.py  jlabSubmit_pvdis.py  old_sum_anarad.py  rivannaSubmit.py  sBatchSubmit.py  sbatch_anarad.py  sum_anarad.py
src/: #MollerDetectorHit.cc#  #MollerSteppingVerbose.cc#  MollerAnalysis.cc  MollerAnalysisMessenger.cc  (+21 more)
(+87 files in other folders)
